# 20

./: .gitignore  .tool-versions  CLAUDE.md  PRD.md  README.md  index.html  overlay.html  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.js
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-02-21-sleep-wake-awareness-design.md  2026-02-21-sleep-wake-awareness.md
src/: App.svelte  app.css  main.js  overlay.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  commands.rs  config.rs  lib.rs  main.rs  meeting.rs  overlay.rs  settings_window.rs  sleep_watch.rs  strict_mode.rs  timer.rs  tray.rs
src/components/: BreakOverlay.svelte  TrayPopover.svelte
src/pages/: Settings.svelte
