[package]
name = "eyebreak"
version = "1.0.0"
description = "EyeBreak — 20-20-20 Eye Care App for macOS"
authors = ["EyeBreak"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "eyebreak_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
rodio = { version = "0.19", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-app-kit = { version = "0.3", features = [
  "NSWorkspace",
  "NSRunningApplication",
  "NSScreen",
  "NSApplication",
  "NSWindow",
] }
objc2-foundation = { version = "0.3", features = [
  "NSArray",
  "NSString",
] }
# CGEventTap is accessed via raw FFI in strict_mode.rs (no crate dep needed)

[features]
default = []
sound = ["rodio"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
